--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-redux": "^7.2.6"
+    "react-redux": "^7.2.6",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "17.0.8",
     "@types/react": "17.0.38",
     "@types/react-redux": "^7.1.18",
+    "@types/uuid": "^8.3.4",
+    "autoprefixer": "^10.4.2",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.13",
     "typescript": "4.5.4"
   }
 }
